--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -29,18 +29,66 @@ svg {
 @utility input-default {
     @apply rounded-md w-full border-2 text-sm border-stone-300 focus:outline-none caret-green-600 bg-transparent px-3 pt-5 pb-2 text-stone-800 focus:border-stone-600 transition-colors;
 }
-@utility btn-black {
-    @apply cursor-pointer flex w-full justify-center items-center bg-black py-3 text-sm font-semibold leading-6 text-white h-[48px] relative rounded-md;
+@utility base-button-clr {
+    @apply cursor-pointer relative inline-flex items-center justify-center rounded-lg px-3 py-2 text-sm leading-6 font-semibold min-h-[38px] min-w-[120px];
+}
+
+@utility actions-style {
+    @apply p-2 hover:bg-stone-100 rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1;
+}
+@utility btn-primary {
+    @apply bg-black text-white hover:bg-stone-800 transition w-auto;
+}
+@utility btn-danger {
+    @apply bg-red-700 text-white hover:bg-red-800 transition w-auto;
+}
+
+@utility btn-secondary {
+    @apply text-stone-700 border border-stone-300 bg-transparent hover:bg-stone-100 transition w-auto;
 }
 
 @utility floating-input {
-    @apply w-full border-2 rounded-md border-stone-300 bg-white px-3 pt-5 pb-2 text-sm text-stone-800 focus:border-stone-600 focus:outline-none;
+    @apply w-full border-2 rounded-md border-stone-300 bg-white px-3 py-2.5 text-sm text-stone-800 focus:border-stone-600 focus:outline-none;
 }
 
-@utility floating-label {
+/* @utility floating-label {
     @apply absolute top-3 left-3 bg-white px-1 text-sm text-stone-400 transition-all peer-placeholder-shown:top-3 peer-placeholder-shown:text-sm peer-placeholder-shown:text-stone-400 peer-focus:-top-1 peer-focus:text-xs peer-focus:text-stone-900;
+} */
+
+/* @utility loader {
+    @apply size-5 border-2 border-b-transparent rounded-full inline-block animate-spin;
+} */
+
+@keyframes pulse-bounce {
+    0%,
+    100% {
+        transform: scale(0.8);
+        opacity: 0.6;
+    }
+    50% {
+        transform: scale(1.2);
+        opacity: 1;
+    }
 }
 
-@utility loader {
-    @apply size-5 border-2 border-b-transparent rounded-full inline-block animate-spin;
+@utility pulse-dot {
+    @apply size-1.5 rounded-full bg-white inline-block;
+}
+
+@layer utilities {
+    .pulse-loader > span {
+        animation: pulse-bounce 1.2s infinite ease-in-out;
+    }
+
+    .pulse-loader > span:nth-child(1) {
+        animation-delay: 0s;
+    }
+
+    .pulse-loader > span:nth-child(2) {
+        animation-delay: 0.2s;
+    }
+
+    .pulse-loader > span:nth-child(3) {
+        animation-delay: 0.4s;
+    }
 }
